--- a/SWpart2/SWpart2/SWpart2.csproj
+++ b/SWpart2/SWpart2/SWpart2.csproj
@@ -46,14 +46,28 @@
         <Reference Include="System.Xml" />
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="Circle.cs" />
         <Compile Include="Form1.cs">
             <SubType>Form</SubType>
         </Compile>
         <Compile Include="Form1.Designer.cs">
             <DependentUpon>Form1.cs</DependentUpon>
         </Compile>
+        <Compile Include="IPolyPoint.cs" />
+        <Compile Include="IShape.cs" />
+        <Compile Include="NGon.cs" />
+        <Compile Include="OpenFigure.cs" />
+        <Compile Include="Point.cs" />
+        <Compile Include="Point2D.cs" />
+        <Compile Include="Point3D.cs" />
+        <Compile Include="Polyline.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="QGon.cs" />
+        <Compile Include="Rectangle.cs" />
+        <Compile Include="Segment.cs" />
+        <Compile Include="TGon.cs" />
+        <Compile Include="Trapeze.cs" />
         <EmbeddedResource Include="Form1.resx">
           <DependentUpon>Form1.cs</DependentUpon>
         </EmbeddedResource>
